        > CONTROL-SHELL-HIBERNATION-EVENT -> CONTROL-SHELL-HIBERNATING-EVENT
        > KSA-ACTIVATION-EVENT -> KSA-ACTIVATED-EVENT
        > KSA-EXECUTION-EVENT -> KSA-EXECUTING-EVENT
        > KSA-OBVIATION-EVENT -> KSA-OBVIATED-EVENT
        > KSA-RETRIGGER-EVENT -> KSA-RETRIGGERED-EVENT

  * Changes to GBBopen initiate & startup
     - New FUNCALL-IN-PACKAGE function

  * Changes to GBBopen Tools
     - New VERY-BRIEF-DATE function
     - New :include-year keyword argument to BRIEF-DATE
     - New :default-to-current-year keyword argument to ENCODE-DATE-AND-TIME,
       PARSE-DATE, and PARSE-DATE-AND-TIME
     - New :time-first keyword argument to ENCODE-DATE-AND-TIME and 
       PARSE-DATE-AND-TIME
     - New *TIME-FIRST* and *YEAR-FIRST* variables
     - New WHITESPACE-CHAR-P function
     - Document PRINTVOT macro
     - Export SORTF and STABLE-SORTF macros
     - New SORTED-MAPHASH function
     - Allow provided string-coalescing hash table in 
       WITH-READING-SAVED/SENT-OBJECTS-BLOCK

  * Changes to GBBopen
     - New *SKIP-DELETED-UNIT-INSTANCE-CLASS-CHANGE* variable
     - New CHECK-INSTANCE-LOCATORS function
     - New WITH-BLACKBOARD-REPOSITORY-LOCKED macro
     - Documented *FIND-VERBOSE*, *USE-MARKING*, CHECK-FOR-DELETED-INSTANCE

  * Changes to Agenda Shell
     - New CONTROL-SHELL-HIBERNATING/AWAKENED-EVENT abstrace control-shell
       event and CONTROL-SHELL-AWAKENED-EVENT control-shell event


Important changes in GBBopen 1.5:

  * Changes to gbbopen-modules directory processing
     - New *GBBOPEN-MODULES-DIRECTORY-VERBOSE* and *SYM-FILE-VERBOSE* 
       global variables

  * Changes to extended-REPL commands
     - New :lmf (LOAD-MODULE-FILE) REPL command

  * Changes to Module Manager
     - Add :skip-recompile module file option

  * Changes to GBBopen Tools
     - New ASSQ function
     - New DEFCONSTRUCT cons-based 2-field "structure"
     - New DELQ-ONE function
     - New HTTP-DATE-AND-TIME function